Prevent long function names from clipping at narrow viewports.
Props ravikhadka, coffee2code.
Fixes https://meta.trac.wordpress.org/ticket/7268.

--- a/source/wp-content/themes/wporg-developer/scss/main.scss
+++ b/source/wp-content/themes/wporg-developer/scss/main.scss
@@ -934,6 +934,7 @@
 			text-indent: -100px;
 			font-size: 20px;
 			line-height: 1.6;
+			overflow-wrap: break-word;
 		}
 
 		h2 {
